Adding pkgref path to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -188,6 +188,7 @@ PublishScripts/
 # NuGet v3's project.json files produces more ignorable files
 *.nuget.props
 *.nuget.targets
+**/.pkgrefgen/*
 
 # Microsoft Azure Build Output
 csx/
