--- a/Packages.props
+++ b/Packages.props
@@ -23,6 +23,7 @@
     <PackageReference Update="Moq" Version="[4.7.145]" />  <!-- Keeping at 4.7; >=4.8 requires System.Threading.Tasks.Extensions which then demands System.Runtime 4.0.0.0. -->
     <PackageReference Update="MsTest.TestAdapter" Version="[1.4.0]" />
     <PackageReference Update="MsTest.TestFramework" Version="[1.4.0]" />
+    <PackageReference Update="Newtonsoft.Json" Version="[12.0.3]"/>
     <PackageReference Update="System.Collections.Immutable" Version="[1.5.0]" />
     <PackageReference Update="System.Threading.Tasks.Dataflow" Version="[4.9.0]" />
   </ItemGroup>
