--- a/src/BuildUpToDateChecker.csproj
+++ b/src/BuildUpToDateChecker.csproj
@@ -13,5 +13,6 @@
     <PackageReference Include="Microsoft.Build.Utilities.Core" ExcludeAssets="Runtime" />
     <PackageReference Include="Microsoft.Build.Locator" />
     <PackageReference Include="McMaster.Extensions.CommandLineUtils" />
+    <PackageReference Include="Newtonsoft.Json" />
   </ItemGroup>
 </Project>
